--- a/TaskBoard.WebApp/appsettings.json
+++ b/TaskBoard.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=MyDB;User Id=sa;Password=yourStrongPassword12#;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=localhost;Database=MyDB;User=user;Password=password;"
   },
   "Logging": {
     "LogLevel": {
