--- a/TaskBoard.WebApp/appsettings.json
+++ b/TaskBoard.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MyDB;User=user;Password=password;"
+    "DefaultConnection": "Server=8080;Database=MyDB;User=user;Password=password;Port=3306;"
   },
   "Logging": {
     "LogLevel": {
